--- a/module-06/Pipfile
+++ b/module-06/Pipfile
@@ -4,9 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+scikit-learn = "==1.5.0"
+pandas = "*"
+pyarrow = "*"
+boto3 = "*"
+fsspec = "*"
+s3fs = "*"
 
 [dev-packages]
-pytest = "*"
 
 [requires]
 python_version = "3.12"
