--- a/module-06/docker-compose.yaml
+++ b/module-06/docker-compose.yaml
@@ -6,6 +6,6 @@ services:
     environment:
       - SERVICES=s3
       - DEFAULT_REGION=us-east-1
-      - AWS_ACCESS_KEY_ID=AKIAZI2LB7FLWIR7QH4K
-      - AWS_SECRET_ACCESS_KEY=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
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
 
